[package]
name = "sui-address-grinder"
version = "0.1.0"
edition = "2024"
description = """
A Rust CLI tool for grinding Sui blockchain addresses and seed phrases.
"""
authors = ["Pawsengineer <manovisut.ktp@gmail.com"]
license = "MIT"
keywords = ["sui", "cli", "address", "grinder", "seed phrase"]
readme = "README.md"
repository = "https://github.com/pawsengineer/sui-address-grinder.git"
homepage = "https://github.com/pawsengineer/sui-address-grinder.git"

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "macros"] }
sui-keys = { git = "https://github.com/MystenLabs/sui" }
sui-types = { git = "https://github.com/MystenLabs/sui" }
clap = { version = "4.5.34", features = ["derive"] }
core_affinity = "0.8.3"
spinoff = "0.8.0"
